# pico-chip8

./: .gitignore  CMakeLists.txt  README.md
cad/: all.step  back_bb.step  back_bb_inlay.step  back_blank.step  front.step  keypad.step  speaker_holder.step
source/: c8core.cpp  c8core.h  c8core.hpp  gfx.cpp  gfx.h  gfx.hpp  main.cpp  menu.cpp  menu.h  menu.hpp  sd_config.cpp  sd_io.cpp  sd_io.h  sd_io.hpp  sdmenu.cpp  sdmenu.h  ssd1306.cpp  ssd1306.h
